Correct bug with overflow hidden

--- a/3M_configuration/css/page.css
+++ b/3M_configuration/css/page.css
@@ -179,7 +179,6 @@ html,body{
 
 #content{
     background-color: white;
-    min-height: 70%;
     display: flex;
     flex-wrap: wrap;
 }
